environments/test-refresh-env/apps/app-train/services/train/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: train
    app.kubernetes.io/part-of: app-train
  name: train
  namespace: test-refresh-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: train
      app.kubernetes.io/part-of: app-train
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: train
        app.kubernetes.io/part-of: app-train
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: train
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
