environments/test-refresh-env/apps/app-train/services/train/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: train
    app.kubernetes.io/part-of: app-train
  name: train
  namespace: test-refresh-env
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: train
    app.kubernetes.io/part-of: app-train
status:
  loadBalancer: {}
