environments/test-refresh-env/apps/app-train/services/train/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: train
  namespace: test-refresh-env
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: train
    weight: 100
  wildcardPolicy: None
